# robot-framework-lint-rules

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  robot.toml  test.robot
libraries/: TestLibrary.py
resources/: test.resource
