[project]
name = "robot-framework-lint-rules"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "robotframework>=7.4.2",
    "robotframework-robocop>=8.2.7",
    "ruff>=0.15.10",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]

# placeholder
[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
