[project]
name = "robot-framework-lint-rules"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "robotframework>=7.4.2",
    "robotframework-robocop>=8.2.7",
    "ruff>=0.15.10",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]

# Ruff configs
[tool.ruff]
line-length = 110
indent-width = 4

[tool.ruff.lint]
select = [
    "E",    # pycodestyles errors
    "F",    # pyflakes
    "B",    # flake8-bugbear
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
